--- a/WebSite/Index.html
+++ b/WebSite/Index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+   <meta charset="utf-8" />
+   <link rel="stylesheet" type="text/css" href="Main/Main.css">
     <title></title>
 </head>
 <body>
