--- a/WebSite/Index.html
+++ b/WebSite/Index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
    <meta charset="utf-8" />
-   <link rel="stylesheet" type="text/css" href="Main/Main.css">
-    <title></title>
+   <title></title>
 </head>
 <body>
-   <h1>Truncuv web</h1>
+   <p><a href="ColorPick/ColorPick.html">Color pick</a></p>
+   <p><a href="MyWeb/index.html">Truncovo</a></p>
+   <p><a href="Spining/index.html">Spining</a></p>
+
 </body>
 </html>
