3 in row created

--- a/WebSite/ColorPick/ColorPick.html
+++ b/WebSite/ColorPick/ColorPick.html
@@ -25,7 +25,7 @@
    <nav class="navbar navbar-toggle-always navbar-expand-lg navbar-dark bg-dark ">
       <div class="container" id="navbarContainer">
 
-         <a class="navbar-brand" href="../../Main.css">Go to main</a>
+         <a class="navbar-brand" href="../index.html">Go to main</a>
 
          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item" id="newColors"><a class="nav-link" href="#">New colors</a></li>
