--- a/WebSite/MyWeb/index.html
+++ b/WebSite/MyWeb/index.html
@@ -13,8 +13,7 @@
 <body>
     <nav class="navbar navbar-toggle-always navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-
-            <a class="navbar-brand" href="../../Main.css">Truncuv Web</a>
+           <a class="navbar-brand" href="../index.html">Truncuv Web</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -39,10 +38,7 @@
                     <li class="nav-item"><a class="nav-link" href="#">Log in</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
                 </ul>
-
-
             </div>
-
         </div>
 
 
