--- a/WebSite/Index.html
+++ b/WebSite/Index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
    <p><a href="ColorPick/ColorPick.html">Color pick</a></p>
+   <p><a href="3inRow/3InRow.html">3 in row</a></p>
    <p><a href="MyWeb/index.html">Truncovo</a></p>
    <p><a href="Spining/index.html">Spining</a></p>
 
