--- a/WebSite/Spining/index.html
+++ b/WebSite/Spining/index.html
@@ -5,45 +5,50 @@
 
 
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-   <link rel="stylesheet" type="text/css" href="Main.css">
+   <link rel="stylesheet" type="text/css" href="./spining.css">
    <title>Truncovo</title>
 </head>
 <body>
-<nav id="navbar-example2" class="navbar navbar-light bg-light">
-   <a class="navbar-brand" href="./ColorPick/ColorPick.html">Spining HK</a>
-   <ul class="nav nav-pills">
-      <li class="nav-item">
-         <a class="nav-link" href="#fat">O nás</a>
-      </li>
-      <li class="nav-item">
-         <a class="nav-link" href="#mdo">Ceník</a>
-      </li>
-      <li class="nav-item">
-         <a class="nav-link" href="#mdo">Galerie</a>
-      </li>
-      <li class="nav-item">
-         <a class="nav-link" href="#mdo">Spining</a>
-      </li>
-      <li class="nav-item">
-         <a class="nav-link" href="#mdo">Tým</a>
-      </li>
-   <!--
-   <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-      <div class="dropdown-menu">
-         <a class="dropdown-item" href="#one">one</a>
-         <a class="dropdown-item" href="#two">two</a>
-         <div role="separator" class="dropdown-divider"></div>
-         <a class="dropdown-item" href="#three">three</a>
+   
+
+<nav class="navbar navbar-toggle-always navbar-expand-lg navbar-dark bg-dark ">
+   <div class="container">
+      <a class="navbar-brand" href="../index.html">Spining HK</a>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColapse" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarColapse">
+         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item"><a class="nav-link" href="#">Ceník</a></li>
+            <li class="nav-item"><a class="nav-link" href="./Galery/Galery.html">Galerie</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Kontakt</a></li>
+            <li class="nav-item"><a class="nav-link" href="../index.html">Go Up</a></li>
+
+            <!--
+            <li class="nav-item dropdown">
+               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown link
+               </a>
+               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action 1</a>
+                  <a class="dropdown-item" href="#">Action 2</a>
+                  <a class="dropdown-item" href="#">Action 3</a>
+               </div>
+            </li>
+            -->
+         </ul>
+         <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="#">Log in</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+         </ul>
       </div>
-   </li>
-   -->
-   </ul>
+   </div>
 </nav>
 
 
 
-<h1>Truncuv web</h1>
+   <h1 >SPINING </h1>
 
 
 
