ToDo list created

--- a/WebSite/ColorPick/ColorPick.html
+++ b/WebSite/ColorPick/ColorPick.html
@@ -6,8 +6,7 @@
    <title>Color picker</title>
    <title>Test web</title>
 
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" type="text/css"
-         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+   <link rel="stylesheet" href="../Library/bootstrap.min.css" type="text/css">
    <link rel="stylesheet" type="text/css" href="ColorPick.css" />
 </head>
 <body>
