--- a/WebSite/Index.html
+++ b/WebSite/Index.html
@@ -5,10 +5,12 @@
    <title></title>
 </head>
 <body>
-   <p><a href="ColorPick/ColorPick.html">Color pick</a></p>
-   <p><a href="3inRow/3InRow.html">3 in row</a></p>
-   <p><a href="MyWeb/index.html">Truncovo</a></p>
-   <p><a href="Spining/index.html">Spining</a></p>
+    <p><a href="ColorPick/ColorPick.html">Color pick</a></p>
+    <p><a href="3inRow/3InRow.html">3 in row</a></p>
+    <p><a href="MyWeb/index.html">Truncovo</a></p>
+    <p><a href="Spining/index.html">Spining</a></p>
+    <p><a href="ToDo/ToDo.html">ToDo list</a></p>
+
 
 </body>
 </html>
